fixed about club on mobile

--- a/frontend/src/components/AboutClub/AboutClub.css
+++ b/frontend/src/components/AboutClub/AboutClub.css
@@ -171,10 +171,66 @@ and (max-device-width : 1024px)  {
     padding: 20px;
     margin-top: 30px;
     margin-left: 0;
+    flex-direction: column;
+
   }
 
   .small-width {
     width: 36vw;
+    margin: auto;
+    clear: both;
+  }
+
+  .club-links {
+    display: flex;
+    height: 200px;
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  .club-meetings {
+    display: flex;
+    height: 200px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 0;
+  }
+
+  .extra {
+    display: none;
+  }
+
+}
+
+@media (max-width: 40em) {
+
+  #about-club-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    height: 150vh;
+
+  }
+
+  .club-header {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  .club-bio {
+    display: flex;
+    padding: 20px;
+    margin-top: 30px;
+    margin-left: 0;
+    width: 26ch;
+  }
+
+  .small-width {
+    width: 68vw;
     margin: auto;
     clear: both;
   }
